<resources>
    <string name="app_name">HomeWork03</string>
    <string name="action_settings">Settings</string>
    <string name="LimitLabel">Limit: </string>
    <string name="SearchButton">Search</string>
    <string name="ResetButton">Reset</string>
    <string name="SortLabel">Sort By:</string>
    <string name="PriceLabel">Price</string>
    <string name="DateLabel">Date</string>
    <string name="ResultsView">Results</string>
    <string name="setLimit"></string>
    <string name="SwitchData" />
    <string name="textListData" />
    <string name="SearchKey" />
    <string name="SearchKeyHint">Key Word (track title, artist name, etc.)</string>
    <string name="titleTrackLabel">Title Track:</string>
    <string name="TitleTrackData">title</string>
    <string name="TrackPriceLabel">Track Price:</string>
    <string name="TrackPriceData">price</string>
    <string name="ArtistNameLabel">Artist:</string>
    <string name="ArtistNameData">artist</string>
    <string name="RelDateLabel">Date:</string>
    <string name="DateData">date</string>
    <string name="ArtWork">ArtWork</string>
    <string name="trackNameDisp">Track:</string>
    <string name="trackNameDispData">track</string>
    <string name="Genre">Genre:</string>
    <string name="GenreData">genre</string>
    <string name="ArtistDisp">Artist:</string>
    <string name="ArtistDispData">artist</string>
    <string name="AlbumDisp">Album:</string>
    <string name="AlbumDispData">album</string>
    <string name="TrackPriceDisp">Track Price:</string>
    <string name="TrackPriceDispData">price</string>
    <string name="AlbumPriceDisp">Album Price:</string>
    <string name="AlbumPriceDispData">price</string>
    <string name="FinishButton">Finish</string>
</resources>
