<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="296dp"
        android:layout_height="307dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/ArtWork" />

    <TextView
        android:id="@+id/tvTrackNameDisp"
        android:layout_width="57dp"
        android:layout_height="21dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="10dp"
        android:text="@string/trackNameDisp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvTrackDispData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:text="@string/trackNameDispData"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTrackNameDisp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Genre"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvGenreData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTrackDispData"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:text="@string/GenreData"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvArtistDisp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvGenre"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="280dp"
        android:text="@string/ArtistDisp"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvArtistDispData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvGenreData"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:text="@string/ArtistDispData"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvAlbumDisp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvArtistDisp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:text="@string/AlbumDisp"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvAlbumDispData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvArtistDispData"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:text="@string/AlbumDispData"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvTrackPriceDisp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAlbumDisp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:text="@string/TrackPriceDisp"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvTrackPriceDipsData"
        android:layout_width="46dp"
        android:layout_height="18dp"
        android:layout_below="@+id/tvAlbumDispData"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:text="@string/TrackPriceDispData"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvAlbumPriceDisp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTrackPriceDisp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:text="@string/AlbumPriceDisp"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvAlbumPriceDispData"
        android:layout_width="53dp"
        android:layout_height="16dp"
        android:layout_below="@+id/tvTrackPriceDipsData"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:text="@string/AlbumPriceDispData"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAlbumPriceDispData"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:text="@string/FinishButton" />
</RelativeLayout>