<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/tvLimitLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/LimitLabel"
        app:layout_constraintEnd_toStartOf="@+id/tvLimitSet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSearchKey" />

    <SeekBar
        android:id="@+id/seekBarLim"
        android:layout_width="303dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:max="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvLimitSet"
        app:layout_constraintTop_toBottomOf="@+id/etSearchKey" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/SearchButton"
        app:layout_constraintEnd_toStartOf="@+id/btnReset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarLim" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ResetButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSearch"
        app:layout_constraintTop_toBottomOf="@+id/seekBarLim" />

    <TextView
        android:id="@+id/tvSortLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/SortLabel"
        app:layout_constraintEnd_toStartOf="@+id/tvPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/PriceLabel"
        app:layout_constraintEnd_toStartOf="@+id/switchPriceDate"
        app:layout_constraintStart_toEndOf="@+id/tvSortLabel"
        app:layout_constraintTop_toBottomOf="@+id/btnReset" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/DateLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/switchPriceDate"
        app:layout_constraintTop_toBottomOf="@+id/btnReset" />

    <TextView
        android:id="@+id/tvResultsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="188dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ResultsView"
        app:layout_constraintBottom_toTopOf="@+id/listViewId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchPriceDate" />

    <ListView
        android:id="@+id/listViewId"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultsLabel">

    </ListView>

    <TextView
        android:id="@+id/tvLimitSet"
        android:layout_width="21dp"
        android:layout_height="22dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/setLimit"
        app:layout_constraintEnd_toStartOf="@+id/seekBarLim"
        app:layout_constraintStart_toEndOf="@+id/tvLimitLabel"
        app:layout_constraintTop_toBottomOf="@+id/etSearchKey" />

    <Switch
        android:id="@+id/switchPriceDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/SwitchData"
        app:layout_constraintEnd_toStartOf="@+id/tvDate"
        app:layout_constraintStart_toEndOf="@+id/tvPrice"
        app:layout_constraintTop_toBottomOf="@+id/btnReset" />

    <EditText
        android:id="@+id/etSearchKey"
        android:layout_width="379dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/SearchKeyHint"
        android:inputType="textPersonName"
        android:text="@string/SearchKey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" tools:targetApi="o" />

</android.support.constraint.ConstraintLayout>